# engine-hal

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.sh  verify_all.sh
crates/hal-font/: Cargo.toml
crates/hal-font/src/: lib.rs
crates/hal-layout/: Cargo.toml
crates/hal-layout/src/: anchor.rs  converter.rs  layout_tree.rs  lib.rs
crates/hal-layout/tests/: control_gallery_test.rs  gallery_golden.json  gallery_golden_test.rs  golden_test.rs
crates/hal-layout/tests/golden/: README.md  export_layout.gd  gallery_golden.json  layout_golden.json  layout_test.tscn
crates/hal-layout/tests/golden/godot_project/: control_gallery_global.json  drag_and_drop_global.json  export_global_golden.gd  export_layout.gd  export_layout.gd.uid  gallery_loader.gd  multiple_resolutions_global.json  project.godot  pseudolocalization_global.json  theming_override_global.json
crates/hal-layout/tests/golden/godot_project/.godot/editor/: editor_layout.cfg  filesystem_cache10  layout_test.tscn-folding-df259f7605167b3ded4dbfdd1a1a4332.cfg
crates/hal-poc/: Cargo.toml  README.md
crates/hal-poc/examples/: dump_tscn.rs
crates/hal-poc/src/: dump.rs  lib.rs
crates/hal-poc/src/parser/: lexer.rs  mod.rs  scene_parser.rs  stream.rs  value.rs
crates/hal-poc/src/types/: mod.rs  scene.rs  variant.rs
crates/hal-poc/tests/: parse_all_demos.rs  parse_real.rs
crates/hal-poc/tests/fixtures/: empty.tscn  sprite.tscn  ui_panel.tscn  variants.tscn
docs/: godot-source-comparison.md
poc-b/: POC_B_REPORT.md  README.md
poc-b/cocos-bridge/: CMakeLists.txt
poc-b/cocos-bridge/include/: hal_bridge.h  hal_facade.h
poc-b/cocos-bridge/src/: hal_bridge.cpp  hal_bridge_generated.cc
poc-b/cocos-demo/: CMakeLists.txt  win32_main.cpp
poc-b/cocos-demo/Classes/: AppDelegate.cpp  AppDelegate.h
poc-b/cocos-demo/Resources/: complex_scene.tscn  layout_test.tscn  test_scene.tscn
poc-b/hal-runtime/: Cargo.toml
poc-b/hal-runtime/src/: lib.rs  scene_builder.rs  sprite_handle.rs
poc-b/hal-verify/: Cargo.toml
poc-b/hal-verify/src/: main.rs
