[package]
name = "hal-poc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Engine-HAL POC: Rust parser for Godot .tscn scene files (hand-written, Godot-aligned)"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glam = { version = "0.33", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "1"
