[package]
name = "hal-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Engine-HAL POC-B: Rust runtime that drives Cocos2d-x via cxx bridge"

[dependencies]
cxx = "1.0"
glam = "0.33"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hal-poc = { path = "../../crates/hal-poc" }
hal-layout = { path = "../../crates/hal-layout" }

# POC-B 只在 Windows + Win32 (i686) 跑
[target.'cfg(target_arch = "x86")'.dependencies]

[lib]
# cxx bridge 同时生成 Rust 静态库 + C++ 文件
# staticlib 产出 MSVC 可链接的 .lib（含全部 Rust 依赖）
# cdylib 产出 .dll（备选）
crate-type = ["staticlib", "rlib"]
# 改名：默认会是 libhal_runtime.lib，去掉 lib 前缀更整洁
name = "hal_runtime"
