[package]
name = "hal-verify"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Engine-HAL POC-B: 对比 Rust 期望坐标 vs Cocos 实际渲染坐标，验证翻译层 + 端到端显示"

[[bin]]
name = "hal-verify"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
